# azure-functions-web-adapter

./: .gitignore  Cargo.toml  README.md  build.rs
examples/expressjs/: Dockerfile  README.md  host.json  package-lock.json
examples/expressjs/HttpTrigger/: function.json
examples/expressjs/app/: index.js  package-lock.json  package.json
examples/expressjs/workers/web-adapter/: worker.config.json
examples/fastapi/: Dockerfile  README.md  worker.config.json
examples/fastapi/app/: main.py
examples/flask/: Dockerfile  README.md  host.json
examples/flask/app/: app.py
examples/nextjs/: Dockerfile  README.md  host.json
examples/nextjs/app/: index.js  package-lock.json  package.json
examples/nextjs/app/app/api/: route.ts
examples/nextjs/app/app/api/echo/: route.ts
examples/nextjs/app/app/api/hello/: route.ts
examples/springboot/: Dockerfile  README.md  host.json
examples/springboot/app/: pom.xml
examples/springboot/app/src/main/java/com/example/springboot/: ApiController.java  SpringbootApplication.java
examples/springboot/workers/web-adapter/: worker.config.json
proto/: FunctionRpc.proto
proto/identity/: ClaimsIdentityRpc.proto
proto/shared/: NullableTypes.proto
src/: config.rs  grpc_handler.rs  http_forwarder.rs  http_proxy.rs  lib.rs  main.rs  process.rs  proxy.rs  readiness.rs
tests/: expressjs_integration.rs
